--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 		</section>
 				<div class="elementor-element elementor-element-0424552 elementor-widget elementor-widget-text-editor" data-id="0424552" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Welcome to Meme Season, where we&#8217;ve combined the best of memes and cryptocurrencies for an exciting experience! As a holder of Meme Season tokens, you&#8217;ll be pleased to know that 1% of every transaction is reflected back to you. Additionally, 1% of every transaction will be allocated to marketing efforts, ensuring the continued growth and exposure of Meme Season. Furthermore, 1% will be dedicated to the liquidity pool (lp), providing stability and liquidity to the Meme Season token ecosystem. With a total tax of 3%, these allocations ensure that the Meme Season community benefits from their participation in the token&#8217;s ecosystem. So, as the memes spread and the crypto market thrives, Join us at Meme Season!</p><p>It’s officially MemeSeason, this year, this June 2023!✅</p>						</div>
+							<p>Welcome to Halving Kitty, get ready to moon with the hottest coin in town!</p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-5b5797f elementor-widget__width-initial elementor-invisible elementor-widget elementor-widget-eael-creative-button" data-id="5b5797f" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;}" data-widget_type="eael-creative-button.default">
 				<div class="elementor-widget-container">
@@ -323,11 +323,11 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-0a2a080 elementor-invisible elementor-widget elementor-widget-heading" data-id="0a2a080" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Get $MEMES</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Get $HCAT</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-e84c36a elementor-invisible elementor-widget elementor-widget-text-editor" data-id="e84c36a" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>#This=MemeSeason2023</p>						</div>
+							<p>#This is Halving Kitty</p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-9758440 elementor-invisible elementor-widget elementor-widget-eael-creative-button" data-id="9758440" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;}" data-widget_type="eael-creative-button.default">
 				<div class="elementor-widget-container">
@@ -339,7 +339,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
                 <div class="creative-button-inner">
 
                                             <span class="eael-creative-button-icon-left"></span>                    
-                    <span class="cretive-button-text">Buy $MEME</span>
+                    <span class="cretive-button-text">Buy $HCAT</span>
 
                                     </div>
 	                        </a>
